test/test_templates/should_fail/no_matching_output.jst

- cmd: hostname
  input: file.txt
